--- a/orig/codefresh-argocd.yml
+++ b/orig/codefresh-argocd.yml
@@ -17,6 +17,18 @@ steps:
     commands:
       - terraform init
       - terraform plan
+  delete_ingress:
+    image: vfarcic/aws-helm-kubectl:2.0.47
+    title: Destroying apps
+    stage: apply
+    commands:
+      - chmod +x get-kubeconfig.sh && ./get-kubeconfig.sh $CLUSTER_NAME $REGION
+      - export KUBECONFIG=kubeconfig.yaml
+      - kubectl delete --filename https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/aws/deploy.yaml
+    when:
+      condition:
+        all:
+          destroy: '"${{DESTROY}}" == "true"'
   apply:
     image: hashicorp/terraform:0.13.0
     title: Applying Terraform
@@ -25,7 +37,8 @@ steps:
       - terraform apply -auto-approve 
       - export CLUSTER_NAME=$(terraform output cluster_name)
       - export REGION=$(terraform output region)
-      - cf_export CLUSTER_NAME REGION
+      - export DESTROY=$(terraform output destroy)
+      - cf_export CLUSTER_NAME REGION DESTROY
     when:
       branch:
         only:
@@ -38,9 +51,12 @@ steps:
       - chmod +x get-kubeconfig.sh && ./get-kubeconfig.sh $CLUSTER_NAME $REGION
       - export KUBECONFIG=kubeconfig.yaml
       - kubectl apply --filename https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/aws/deploy.yaml
-      - sleep 1
+      - sleep 10
       - helm upgrade --install argocd argo-cd --repo https://argoproj.github.io/argo-helm --namespace argocd --create-namespace --version 1.6.2 --values argocd-values.yaml --wait
     when:
+      condition:
+        all:
+          notDestroy: '"${{DESTROY}}" == "false"'
       branch:
         only:
           - master
