--- a/codefresh.yml
+++ b/codefresh.yml
@@ -41,6 +41,7 @@ steps:
       - kubectl apply --filename https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/aws/deploy.yaml
       - sleep 60
       - helm upgrade --install argocd argo-cd --repo https://argoproj.github.io/argo-helm --namespace argocd --create-namespace --version 1.6.2 --values argocd-values.yaml --wait
+      - kubectl apply --filename apps.yaml
     when:
       condition:
         all:
